getting data from json file

--- a/src/app/TestComponent/test.component.html
+++ b/src/app/TestComponent/test.component.html
@@ -28,6 +28,6 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
     <button type="submit" class="btn btn-primary mb-2">Submit</button>
-    <pre>{{userData | json}}</pre>
+    <pre>{{jsonData | json}}</pre>
   </form>
 
